# winrtspeech_pr

./: README.md  pyproject.toml
src/winrtspeech/: __main__.py  winrthelper.py
src/winrtspeech/cli/: __init__.py
