[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winrtspeech"
version = "0.0.1"
description = "winrtspeech"
readme = "README.md"
requires-python = ">= 3.8"
authors = [
    { name = "Yukihiro Nakadaira", email = "yukihiro.nakadaira@gmail.com" },
]
dependencies = [
    "win32more @ git+https://github.com/ynkdir/py-win32more.git"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
winrtspeech = "winrtspeech.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
lint.select = ["E4", "E7", "E9", "F", "I"]
